auto-populated description of physical property was added

--- a/physics.html
+++ b/physics.html
@@ -127,11 +127,6 @@
               <p>An example will be auto-populated and and explanation will be provided.</p>
             </div>
 
-            <!-- FIXME: make this logic simpler if you can-->
-            <div ng-show="appBool.tryCalcAgain"> <!-- && "!appBool.afterCalcMessage"> -->
-              <p>Please input the variables below and click &quot;Calculate!&quot;.</p>
-            </div>
-
             <div ng-show="appBool.afterCalcMessage">
               <p>Try another combination or select another property to calculate.</p>
             </div>
@@ -149,6 +144,22 @@
                   </ul>
                   <p styling="padding:5px;"></p>
                 </div>
+              </div>
+
+              <div class="form-group" ng-show="appBool.tryCalcAgain">
+                <div class="row row content">
+                  <div class="col-xs-8">
+                    <div class="well">
+                      <h4>Description:</h4>
+                      <p>{{physicalProperty.description}}</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- FIXME: make this logic simpler if you can-->
+              <div ng-show="appBool.tryCalcAgain"> <!-- && "!appBool.afterCalcMessage"> -->
+                <p>Please input the variables below and click &quot;Calculate!&quot;.</p>
               </div>
 
               <!-- defining form textboxes-->
