--- a/index.html
+++ b/index.html
@@ -119,18 +119,54 @@
             <p class='visible-xs visible-sm' style='padding:50px;'></p>
             <p class='visible-md visible-lg' style='padding:110px;'></p>
             <p class='name-banner'>William Barela</p>
-            <div class="well">
-              <p>Here is the land of the dreamtime where all things are possible and where we forge what will be the future.</p>
-              <p>We hold the keys and we make ourselves and life what we want it to be.</p>
+
+            <div class="row row-content">
+              <div class="col-xs-10 col-xs-push-1">
+                <div class="well">
+                  <p>Welcome to my website!</p>
+                  <p>Some features are still under construction right now</p>
+                  <p>Please click on the link below to see the latest feature!</p>
+                  <p>This is a Bootstrap and Angular.js based project which calculates basic physical properties.</p>
+                </div>
+              </div>
             </div>
-            <!--
-            <div class="embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item" src="//www.youtube.com/embed/ePbKGoIGAXY"></iframe>
+
+            <div class="row row-content">
+              <div class="col-xs-8 col-xs-push-2 col-sm-7 col-sm-push-3 col-md-8 col-md-push-2 col-lg-7 col-lg-push-3">
+                <button class="btn-lg btn-info" type="button" name="button"><span><a href="physics.html">Basic Physical Property Calculator</a></span></button>
+              </div>
             </div>
-            -->
+            <p class="padding-20"></p>
+            <div class="row row-content">
+              <div class="col-xs-6 col-xs-push-3 col-xs-4 col-xs-push-4">
+                <div class='nav navbar-nav'>
+                    <a class='btn btn-social-icon btn-github' href="https://github.com/WilliamBarela" target="_blank"><i class='fa fa-github'></i></a>
+                    <a class='btn btn-social-icon btn-linkedin' href="https://www.linkedin.com/in/WilliamBarela" target="_blank"><i class='fa fa-linkedin'></i></a>
+                    <a class='btn btn-social-icon btn-twitter' href="https://twitter.com/FullStackDev0" target="_blank"><i class='fa fa-twitter'></i></a>
+                    <a class='btn btn-social-icon btn-pinterest' href="https://www.youtube.com/channel/UCWBXyM9UHWW-9tw-QMYMSmg" target="_blank"><i class='fa fa-youtube'></i></a>
+                    <!-- <a class='btn btn-social-icon btn-twitter' href="mailto:"><i class='fa fa-envelope'></i></a> -->
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
+
+<!--
+      <div class='container padding-20'>
+          <div class='row'>
+              <div class="col-xs-4 col-xs-push-5 col-md-4 col-md-push-8">
+                  <div class='nav navbar-nav'>
+                      <a class='btn btn-social-icon btn-github' href="https://github.com/WilliamBarela" target="_blank"><i class='fa fa-github'></i></a>
+                      <a class='btn btn-social-icon btn-linkedin' href="https://www.linkedin.com/in/WilliamBarela" target="_blank"><i class='fa fa-linkedin'></i></a>
+                      <a class='btn btn-social-icon btn-twitter' href="https://twitter.com/FullStackDev0" target="_blank"><i class='fa fa-twitter'></i></a>
+                      <a class='btn btn-social-icon btn-pinterest' href="https://www.youtube.com/channel/UCWBXyM9UHWW-9tw-QMYMSmg" target="_blank"><i class='fa fa-youtube'></i></a>
+                      <a class='btn btn-social-icon btn-twitter' href="mailto:"><i class='fa fa-envelope'></i></a>
+                  </div>
+              </div>
+          </div>
+      </div>
+-->
 
     <!-- Inclusion of jQuery library if saved in webpage folder-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
