--- a/physics.html
+++ b/physics.html
@@ -2,29 +2,31 @@
 <html ng-app='lister'>
   <head>
     <meta charset="utf-8">
-    <!-- See getting started with bootstrap 2:09-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="icon" type="image/png" href="img/logo-wb-cmyk.png"/>
     <!-- Importing Bootstrap if it is saved in files-->
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet">
-<!--
-    <link href="css/bootstrap/bootstrap-theme.min.css" rel="stylesheet">
--->
+    <!--<link href="css/bootstrap/bootstrap-theme.min.css" rel="stylesheet">-->
+
     <!-- Importing Bootstrap if you want to link directly to Bootstrap CDN (prefered)-->
     <!--
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
     -->
+
     <!-- Importing Font Awesome and Bootstrap Social CSS classes -->
     <link href="css/font-awesome/font-awesome.min.css" rel="stylesheet">
     <link href="css/bootstrap/bootstrap-social.css" rel="stylesheet">
+
     <!-- Custom CSS file import-->
     <link href="css/lavish-bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="css/custom-styles.css">
+
     <!-- Importing Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Cabin|Ek+Mukta|Open+Sans|Special+Elite" rel="stylesheet">
+
     <!-- Importing Angular.js-->
     <script src='js/angular/angular.min.js'></script>
     <script src='js/app.js'></script>
@@ -215,7 +217,7 @@
           </div>
         </div>
       </div>
-      <p style="padding:100px;"></p>
+      <p style="padding:117px;"></p>
 
 
       <footer class="row-footer" id='my-footer'>
@@ -233,17 +235,16 @@
 
                   <div class='col-xs-12 col-xs-offset-1 col-sm-5 col-sm-push-3'>
                       <div class='nav navbar-nav' style="padding: 40px 10px;">
-                          <a class='btn btn-social-icon btn-google-plus' href="http://google.com/+"><i class='fa fa-google-plus'></i></a>
-                          <a class='btn btn-social-icon btn-facebook' href="http://www.facebook.com/profile.php?id="><i class='fa fa-facebook'></i></a>
-                          <a class='btn btn-social-icon btn-linkedin' href="http://www.linkedin.com/in/"><i class='fa fa-linkedin'></i></a>
-                          <a class='btn btn-social-icon btn-twitter' href="http://twitter.com/"><i class='fa fa-twitter'></i></a>
-                          <a class='btn btn-social-icon btn-youtube' href="http://youtube.com/"><i class='fa fa-youtube'></i></a>
-                          <a class='btn btn-social-icon btn-twitter' href="mailto:"><i class='fa fa-envelope'></i></a>
+                          <a class='btn btn-social-icon btn-github' href="https://github.com/WilliamBarela" target="_blank"><i class='fa fa-github'></i></a>
+                          <a class='btn btn-social-icon btn-linkedin' href="https://www.linkedin.com/in/WilliamBarela" target="_blank"><i class='fa fa-linkedin'></i></a>
+                          <a class='btn btn-social-icon btn-twitter' href="https://twitter.com/FullStackDev0" target="_blank"><i class='fa fa-twitter'></i></a>
+                          <a class='btn btn-social-icon btn-pinterest' href="https://www.youtube.com/channel/UCWBXyM9UHWW-9tw-QMYMSmg" target="_blank"><i class='fa fa-youtube'></i></a>
+                          <!-- <a class='btn btn-social-icon btn-twitter' href="mailto:"><i class='fa fa-envelope'></i></a> -->
                       </div>
                   </div>
                   <div class='col-xs-12'>
                       <p style="padding:10px;"></p>
-                      <p align=center>Handcrafted with <span style='color:red;'>love</span> on our beloved blue marble. 2017</p>
+                      <p align=center>Handcrafted with <span style='color:red;'>love</span> in Midgard. 2017</p>
                   </div>
               </div>
           </div>
