--- a/about.html
+++ b/about.html
@@ -176,21 +176,21 @@
 
             <div class='col-xs-12 col-xs-offset-1 col-sm-5 col-sm-push-3'>
                 <div class='nav navbar-nav' style="padding: 40px 10px;">
-                    <a class='btn btn-social-icon btn-google-plus' href="http://google.com/+"><i class='fa fa-google-plus'></i></a>
-                    <a class='btn btn-social-icon btn-facebook' href="http://www.facebook.com/profile.php?id="><i class='fa fa-facebook'></i></a>
-                    <a class='btn btn-social-icon btn-linkedin' href="http://www.linkedin.com/in/"><i class='fa fa-linkedin'></i></a>
-                    <a class='btn btn-social-icon btn-twitter' href="http://twitter.com/"><i class='fa fa-twitter'></i></a>
-                    <a class='btn btn-social-icon btn-youtube' href="http://youtube.com/"><i class='fa fa-youtube'></i></a>
-                    <a class='btn btn-social-icon btn-twitter' href="mailto:"><i class='fa fa-envelope'></i></a>
+                    <a class='btn btn-social-icon btn-github' href="https://github.com/WilliamBarela" target="_blank"><i class='fa fa-github'></i></a>
+                    <a class='btn btn-social-icon btn-linkedin' href="https://www.linkedin.com/in/WilliamBarela" target="_blank"><i class='fa fa-linkedin'></i></a>
+                    <a class='btn btn-social-icon btn-twitter' href="https://twitter.com/FullStackDev0" target="_blank"><i class='fa fa-twitter'></i></a>
+                    <a class='btn btn-social-icon btn-pinterest' href="https://www.youtube.com/channel/UCWBXyM9UHWW-9tw-QMYMSmg" target="_blank"><i class='fa fa-youtube'></i></a>
+                    <!-- <a class='btn btn-social-icon btn-twitter' href="mailto:"><i class='fa fa-envelope'></i></a> -->
                 </div>
             </div>
             <div class='col-xs-12'>
                 <p style="padding:10px;"></p>
-                <p align=center>Handcrafted with <span style='color:red;'>love</span> on our beloved blue marble. 2017</p>
+                <p align=center>Handcrafted with <span style='color:red;'>love</span> in Midgard. 2017</p>
             </div>
         </div>
     </div>
 </footer>
+
     <!-- Inclusion of jQuery library if saved in webpage folder-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/bootstrap/bootstrap.min.js"></script>
