cosmetic update to exclude links under construction

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Importing Angular.js-->
     <script src='js/angular/angular.min.js'></script>
     <script src='js/app.js'></script>
-    <title>Innovation Starts Here: William Barela</title>
+    <title>{Developer: William Barela}</title>
   </head>
 
 
@@ -88,26 +88,23 @@
                 -->
 
                 <ul class='dropdown-menu'>
-                  <li class='dropdown-header'>Professional</li>
-                  <li><a href="fullstack.html">Full Stack Web Development</a></li>
-                  <li><a href="programming.html">Programming</a></li>
-                  <li><a href="design.html">Design</a></li>
+                  <li class='dropdown-header'>Tools</li>
+                  <li><a href="physics.html">Basic Physics Calculator</a></li>
                   <li role='separator' class='divider'></li>
-                  <li class='dropdown-header'>Hobbies</li>
-                  <li><a href="photography.html">Photography</a></li>
-                  <li><a href="linguistics.html">Linguistics</a></li>
-                  <li><a href="physics.html">Physics</a></li>
-                  <li role='separator' class='divider'></li>
-                  <li class='dropdown-header'>Documents</li>
-                  <li><a href="#">Resume</a></li>
+                  <li class='dropdown-header'>Other Resources</li>
+                  <li><a href="#">More coming soon...</a></li>
                 </ul>
               </li>
+              <!-- Reincorporate Contact button when you find a secure method-->
               <!--Contact Button-->
+              <!--
               <li>
                 <a href='contact.html'>
                   <span><i class='fa fa-envelope'> </i></span> Contact
                 </a>
               </li>
+              -->
+
             </ul>
           </div>
         </div>
@@ -133,9 +130,10 @@
 
             <div class="row row-content">
               <div class="col-xs-8 col-xs-push-2 col-sm-7 col-sm-push-3 col-md-8 col-md-push-2 col-lg-7 col-lg-push-3">
-                <button class="btn-lg btn-info" type="button" name="button"><span><a href="physics.html">Basic Physical Property Calculator</a></span></button>
+                <button class="btn-lg btn-info" type="button" name="button"><span><a href="physics.html">Physics Property Calculator</a></span></button>
               </div>
             </div>
+            <p class="padding-20"></p>
             <p class="padding-20"></p>
             <div class="row row-content">
               <div class="col-xs-6 col-xs-push-3 col-xs-4 col-xs-push-4">
@@ -152,21 +150,6 @@
         </div>
       </div>
 
-<!--
-      <div class='container padding-20'>
-          <div class='row'>
-              <div class="col-xs-4 col-xs-push-5 col-md-4 col-md-push-8">
-                  <div class='nav navbar-nav'>
-                      <a class='btn btn-social-icon btn-github' href="https://github.com/WilliamBarela" target="_blank"><i class='fa fa-github'></i></a>
-                      <a class='btn btn-social-icon btn-linkedin' href="https://www.linkedin.com/in/WilliamBarela" target="_blank"><i class='fa fa-linkedin'></i></a>
-                      <a class='btn btn-social-icon btn-twitter' href="https://twitter.com/FullStackDev0" target="_blank"><i class='fa fa-twitter'></i></a>
-                      <a class='btn btn-social-icon btn-pinterest' href="https://www.youtube.com/channel/UCWBXyM9UHWW-9tw-QMYMSmg" target="_blank"><i class='fa fa-youtube'></i></a>
-                      <a class='btn btn-social-icon btn-twitter' href="mailto:"><i class='fa fa-envelope'></i></a>
-                  </div>
-              </div>
-          </div>
-      </div>
--->
 
     <!-- Inclusion of jQuery library if saved in webpage folder-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
