--- a/physics.html
+++ b/physics.html
@@ -90,26 +90,22 @@
                 -->
 
                 <ul class='dropdown-menu'>
-                  <li class='dropdown-header'>Professional</li>
-                  <li><a href="fullstack.html">Full Stack Web Development</a></li>
-                  <li><a href="programming.html">Programming</a></li>
-                  <li><a href="design.html">Design</a></li>
+                  <li class='dropdown-header'>Tools</li>
+                  <li><a href="physics.html">Basic Physics Calculator</a></li>
                   <li role='separator' class='divider'></li>
-                  <li class='dropdown-header'>Hobbies</li>
-                  <li><a href="photography.html">Photography</a></li>
-                  <li><a href="linguistics.html">Linguistics</a></li>
-                  <li><a href="physics.html">Physics</a></li>
-                  <li role='separator' class='divider'></li>
-                  <li class='dropdown-header'>Documents</li>
-                  <li><a href="#">Resume</a></li>
+                  <li class='dropdown-header'>Other Resources</li>
+                  <li><a href="#">More coming soon...</a></li>
                 </ul>
               </li>
+              <!-- Reincorporate Contact button when you find a secure method-->
               <!--Contact Button-->
+              <!--
               <li>
                 <a href='contact.html'>
                   <span><i class='fa fa-envelope'> </i></span> Contact
                 </a>
               </li>
+              -->
             </ul>
           </div>
         </div>
@@ -122,11 +118,12 @@
         <div class="row row-content">
           <div class="col-xs-11 col-xs-offset-1 col-sm-10 col-sm-offset-2 col-md-8 col-md-offset-3">
 
-            <h1>Physics Properties Calculator</h1>
+            <h2>Physics Properties Calculator</h2>
 
             <div ng-show="appBool.initMessage">
               <p>Select one of the properties from the dropdown below to calculate the property.</p>
               <p>An example will be auto-populated and and explanation will be provided.</p>
+              <p>Please note that all calculations are rounded to the third significant digit.</p>
             </div>
 
             <div ng-show="appBool.afterCalcMessage">
@@ -229,7 +226,7 @@
                           <li><a href="index.html">Home</a></li>
                           <li><a href="aboutus.html">About</a></li>
                           <li><a href="physics.html">Angularjs App</a></li>
-                          <li><a href="#">Contact</a></li>
+                          <!-- <li><a href="#">Contact</a></li> -->
                       </ul>
                   </div>
 
