--- a/about.html
+++ b/about.html
@@ -67,28 +67,44 @@
                 <a href='#' class='dropdown-toggle' data-toggle='dropdown' role='button' aria-haspopup='true' aria-expanded='false'>
                   <span class='glyphicon glyphicon-list'></span> Resources <span class='caret'></span>
                 </a>
+
                 <!--Dropdown Menu Contents-->
+                <!--FIXME Expand the resources dropdown with this list-->
+                <!--
                 <ul class='dropdown-menu'>
                   <li class='dropdown-header'>Professional</li>
-                  <li><a href="#">Full Stack Web Development</a></li>
-                  <li><a href="#">Programming</a></li>
-                  <li><a href="#">Design</a></li>
+                  <li><a href="fullstack.html">Full Stack Web Development</a></li>
+                  <li><a href="programming.html">Programming</a></li>
+                  <li><a href="design.html">Design</a></li>
                   <li role='separator' class='divider'></li>
                   <li class='dropdown-header'>Hobbies</li>
-                  <li><a href="#">Photography</a></li>
-                  <li><a href="#">Linguistics</a></li>
+                  <li><a href="photography.html">Photography</a></li>
+                  <li><a href="linguistics.html">Linguistics</a></li>
                   <li><a href="physics.html">Physics</a></li>
                   <li role='separator' class='divider'></li>
                   <li class='dropdown-header'>Documents</li>
                   <li><a href="#">Resume</a></li>
                 </ul>
+                -->
+
+                <ul class='dropdown-menu'>
+                  <li class='dropdown-header'>Tools</li>
+                  <li><a href="physics.html">Basic Physics Calculator</a></li>
+                  <li role='separator' class='divider'></li>
+                  <li class='dropdown-header'>Other Resources</li>
+                  <li><a href="#">More coming soon...</a></li>
+                </ul>
               </li>
+              <!-- Reincorporate Contact button when you find a secure method-->
               <!--Contact Button-->
+              <!--
               <li>
                 <a href='contact.html'>
                   <span><i class='fa fa-envelope'> </i></span> Contact
                 </a>
               </li>
+              -->
+
             </ul>
           </div>
         </div>
@@ -97,25 +113,15 @@
 <div class="parallax"></div>
 
 <div class="container">
-
-    <!--
       <div class="row row-content">
         <div class="col-xs-12">
-          <p style="padding:10px"></p>
-          <img src="img/nm-1920-320.jpg" alt="New Mexico" width="100%" height="auto">
-        </div>
-      </div>
-
-    -->
-
-      <div class="row row-content">
-        <div class="col-xs-12 banner">
-          <div>
-            "This is New Mexico"
-          </div>
-          <div>
-            "This is where I am from"
-          </div>
+          <h1>About</h1>
+          <p>First and foremost, I am a driven autodidact with a voracious appetite for knowledge.
+          Additionally, I am an avid problem solver who is always looking for an algorithmic solution
+          to what otherwise would be complex and time consuming problems. I am a well rounded
+          programmer who is working tirelessly to enter the world of web developers. New Mexico is
+          my home, Austin is where my heart is, and South Korea is where I currently reside.
+          Send a message on LinkedIn if you would like to connect.</p>
         </div>
       </div>
 
@@ -128,7 +134,7 @@
                 <img src="img/road-1920-640.jpg" alt="New Mexico" width="100%" height="auto" class="image">
                 <div class="overlay">
                   <div class="text">
-                    "Out on the Road"
+                    Out on the Road
                   </div>
                 </div>
               </div>
@@ -139,7 +145,7 @@
                 <img src="img/organs-1920-960-2.jpg" alt="New Mexico" width="100%" height="auto" class="image">
                 <div class="overlay">
                   <div class="text">
-                    "Organ Mountains of Las Cruces"
+                    Organ Mountains of Las Cruces
                   </div>
                 </div>
               </div>
@@ -152,7 +158,7 @@
             <img src="img/ws2-wm-1920-1080-80.jpg" alt="New Mexico" width="auto" height="100%" class="image">
             <div class="overlay">
               <div class="text">
-                "Me in White Sands National Monmument"
+                Me in White Sands National Monmument
               </div>
             </div>
           </div>
@@ -170,7 +176,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="aboutus.html">About</a></li>
                     <li><a href="physics.html">Angularjs App</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <!-- <li><a href="#">Contact</a></li> -->
                 </ul>
             </div>
 
